--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,22 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
+node_modules/
+dist/
 dist-ssr
 *.local
+
+# Environment variables
+.env*
+
+
+# Test coverage reports
+coverage/
+
+# Vite specific files
+vite.config.js
+vite.config.ts
+
 
 # Editor directories and files
 .vscode/*
@@ -23,28 +35,5 @@ dist-ssr
 *.sln
 *.sw?
 
-
-
-
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-.env
 
 
