--- a/package.json
+++ b/package.json
@@ -4,13 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "vite",
+    "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "server": "cd server && npm run dev",
-    "dev": "concurrently -n \"client,server\" -c \"bgBlue,bgGreen\" \"npm start\" \"npm run server\""
-  },
+    "preview": "vite preview"
+   },
   "dependencies": {
     "@babel/runtime": "^7.24.1",
     "@ramonak/react-progress-bar": "^5.2.0",
