update rating star

--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "vite build"
   },
   "keywords": [],
   "author": "",
@@ -29,6 +30,7 @@
     "nodemailer": "^6.9.8",
     "nodemon": "^3.0.2",
     "otp-generator": "^4.0.1",
-    "razorpay": "^2.9.2"
+    "razorpay": "^2.9.2",
+    "server": "file:"
   }
 }
