--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
-   },
+  },
   "dependencies": {
     "@babel/runtime": "^7.24.1",
     "@ramonak/react-progress-bar": "^5.2.0",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "chart.js": "^4.4.2",
+    "client": "file:",
     "concurrently": "^8.2.2",
     "copy-to-clipboard": "^3.3.3",
     "js-cookie": "^3.0.5",
