CICD with serverles aws lambda

--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.1",
     "cookie": "^1.0.1",
@@ -30,6 +29,7 @@
     "nodemailer": "^6.9.8",
     "nodemon": "^3.0.2",
     "otp-generator": "^4.0.1",
-    "razorpay": "^2.9.2"
+    "razorpay": "^2.9.2",
+    "serverless-http": "^3.2.0"
   }
 }
