--- a/.github/workflows/lambda_deploy.yml
+++ b/.github/workflows/lambda_deploy.yml
@@ -6,7 +6,7 @@ on:
       - main
     paths:
       - 'server/**'
-      - '.github/workflows/deploy.yml'
+      - '.github/workflows/lambda_deploy.yml'
 jobs:
   deploy:
     runs-on: ubuntu-latest
