--- a/server/package.json
+++ b/server/package.json
@@ -23,11 +23,11 @@
     "express": "^4.21.1",
     "express-fileupload": "^1.4.3",
     "js-cookie": "^3.0.5",
-    "jsonwebtoken": "^9.0.2",
+    "jwt-auth-utility": "^1.0.8",
     "mongoose": "^8.0.3",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.8",
-    "nodemon": "^3.0.2",
+    "nodemon": "^3.1.7",
     "otp-generator": "^4.0.1",
     "razorpay": "^2.9.2",
     "serverless-http": "^3.2.0"
