--- a/server/serverless.yml
+++ b/server/serverless.yml
@@ -13,7 +13,8 @@ provider:
     MAIL_HOST: ${env:MAIL_HOST}
     MAIL_USER: ${env:MAIL_USER}
     MAIL_PASS: ${env:MAIL_PASS}
-    JWT_SECRET: ${env:JWT_SECRET}
+    ACCESS_TOKEN_SECRET: ${env:ACCESS_TOKEN_SECRET}
+    REFRESH_TOKEN_SECRET: ${env:REFRESH_TOKEN_SECRET}
     FOLDER_NAME: ${env:FOLDER_NAME}
     CLOUD_NAME: ${env:CLOUD_NAME}
     API_KEY: ${env:API_KEY}
